主页功能完成

--- a/index.html
+++ b/index.html
@@ -1,88 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大事件 - 登录/注册页面</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>layout 后台大布局 - Layui</title>
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-    <link rel="stylesheet" href="/assets/css/login.css">
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
 </head>
 
-<body>
-    <!-- 顶部logo -->
-    <div class="layui-main">
-        <img src="/assets/images/logo.png" alt="">
-    </div>
-    <!-- 注册和登录区域 -->
-    <div class="loginAndRegBox">
-        <!-- 登陆注册标题 -->
-        <div class="titleBox"></div>
-        <!-- 登录区域 -->
-        <div class="login-box">
-            <!-- 登录表单 -->
-            <form class="layui-form" id="form_login" action="">
-                <!-- 用户名 -->
-                <div class="layui-form-item">
-                    <i class="layui-icon layui-icon-username"></i>   
-                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
-                        autocomplete="off" class="layui-input">
-                </div>
-                <!-- 密码 -->
-                <div class="layui-form-item">
-                    <i class="layui-icon layui-icon-password"></i>   
-                    <input type="text" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
-                        autocomplete="off" class="layui-input">
-                </div>
-                <!-- 登录按钮 -->
-                <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit>立即提交</button>
-                </div>
-                <!-- a -->
-                <div class="layui-form-item links">
-                    <a href="javascript:;" id="link_reg">去注册账号</a>
-                </div>
-            </form>
+<body class="layui-layout-body">
+    <div class="layui-layout layui-layout-admin">
+        <div class="layui-header">
+            <div class="layui-logo"><img src="/assets/images/logo.png" alt=""></div>
+            <!-- 头部区域（可配合layui已有的水平导航） -->
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item">
+                    <!-- 顶部头像区域 -->
+                    <a href="javascript:;" class="userinfo">
+                        <img src="/assets/images/sample.jpg" class="layui-nav-img">
+                        <span class="text-avatar">A</span>个人中心
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="">基本资料</a></dd>
+                        <dd><a href="">更换头像</a></dd>
+                        <dd><a href="">重置密码</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item"><a href="javascript:;" id="btnLogout">
+                        <span class="iconfont icon-tuichu"></span>退出</a></li>
+            </ul>
+        </div>
 
+        <div class="layui-side layui-bg-black">
+            <div class="layui-side-scroll">
+                <!-- 侧边栏头像区域 -->
+                <div class="userinfo">
+                    <img src="" class="layui-nav-img">
+                    <span class="text-avatar">A</span>
+                    <span id="welcome">欢迎 XXX</span>
+                </div>
+                <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+                <ul class="layui-nav layui-nav-tree" lay-shrink='all' lay-filter="test">
+                    <li class="layui-nav-item layui-this"><a href="/home/dashboard.html" target="fm">
+                            <span class="iconfont icon-home"></span>首页</a></li>
+                    <!-- 删除类不让默认展示 -->
+                    <li class="layui-nav-item">
+                        <a class="" href="javascript:;">
+                            <span class="iconfont icon-16"></span>文章管理</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;">
+                                    <i class="layui-icon layui-icon-app"></i> 文章类别</a></dd>
+                            <dd><a href="javascript:;">
+                                    <i class="layui-icon layui-icon-app"></i> 文章列表</a></dd>
+                            <dd><a href="javascript:;">
+                                    <i class="layui-icon layui-icon-app"></i> 发表文章</a></dd>
+                        </dl>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:;">
+                            <span class="iconfont icon-user"></span>个人中心</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 基本资料</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 重置密码</a></dd>
+                        </dl>
+                    </li>
+
+
+                </ul>
+            </div>
         </div>
-        <!-- 注册区域 -->
-        <div class="reg-box" style="display:none">
-             <!-- 注册表单 -->
-             <form class="layui-form" id="form_reg" action="">
-                <!-- 用户名 -->
-                <div class="layui-form-item">
-                    <i class="layui-icon layui-icon-username"></i>   
-                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
-                        autocomplete="off" class="layui-input">
-                </div>
-                <!-- 密码 -->
-                <div class="layui-form-item">
-                    <i class="layui-icon layui-icon-password"></i>   
-                    <input type="text" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
-                        autocomplete="off" class="layui-input">
-                </div>
-                 <!-- 确认密码 -->
-                 <div class="layui-form-item">
-                    <i class="layui-icon layui-icon-password"></i>   
-                    <input type="text" name="repassword" required lay-verify="required|pwd|repwd" placeholder="再次确认密码"
-                        autocomplete="off" class="layui-input">
-                </div>
-                <!-- 注册按钮 -->
-                <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit>注册</button>
-                </div>
-                <!-- a -->
-                <div class="layui-form-item links">
-                    <a href="javascript:;" id="link_login">去登陆</a>
-                </div>
-            </form>
-           
+
+        <div class="layui-body">
+            <!-- 内容主体区域 -->
+            <iframe src="/home/dashboard.html" name="fm" frameborder="0"></iframe>
+            <div class="layui-footer">
+                <!-- 底部固定区域 -->
+                © layui.com - 底部固定区域
+            </div>
         </div>
-    </div>
-    <script src="/assets/lib/layui/layui.all.js"></script>
-    <script src="/assets/lib/jquery.js"></script>
-    <script src="/assets/js/baseAPI.js"></script>
-    <script src="/assets/js/login.js"></script>
+        <script src="/assets/lib/layui/layui.all.js"></script>
+        <script src="/assets/lib/jquery.js"></script>
+        <script src="/assets/js/baseAPI.js"></script>
+        <script src="/assets/js/index.js"></script>
+</body>
+
+</html>
 </body>
 
 </html>
